--- a/package.json
+++ b/package.json
@@ -37,6 +37,16 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@syncfusion/ej2-base": "^29.1.33",
+    "@syncfusion/ej2-buttons": "^29.1.34",
+    "@syncfusion/ej2-dropdowns": "^29.1.33",
+    "@syncfusion/ej2-grids": "^29.1.33",
+    "@syncfusion/ej2-inputs": "^29.1.34",
+    "@syncfusion/ej2-lists": "^29.1.34",
+    "@syncfusion/ej2-navigations": "^29.1.34",
+    "@syncfusion/ej2-popups": "^29.1.34",
+    "@syncfusion/ej2-react-spreadsheet": "^29.1.34",
+    "@syncfusion/ej2-splitbuttons": "^29.1.33",
     "@tanstack/react-query": "^5.70.0",
     "autoprefixer": "^10.4.20",
     "babel-plugin-react-compiler": "19.0.0-beta-aeaed83-20250323",
@@ -48,14 +58,15 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
-    "sonner": "^1.7.1",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
