--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@syncfusion/ej2-react-spreadsheet": "^29.1.34",
     "@syncfusion/ej2-splitbuttons": "^29.1.33",
     "@tanstack/react-query": "^5.70.0",
+    "@tanstack/react-virtual": "^3.13.6",
     "autoprefixer": "^10.4.20",
     "babel-plugin-react-compiler": "19.0.0-beta-aeaed83-20250323",
     "class-variance-authority": "^0.7.1",
@@ -72,7 +73,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "axios": "^1.5.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.68.0",
